; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_crypto.c_bt_mesh_fcs_calc.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_crypto.c_bt_mesh_fcs_calc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crc_table = common dso_local global i64* null, align 8
@.str = private unnamed_addr constant [11 x i8] c"fcs 0x%02x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @bt_mesh_fcs_calc(i64* %0, i64 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 255, i64* %5, align 8
  br label %6

6:                                                ; preds = %10, %2
  %7 = load i64, i64* %4, align 8
  %8 = add i64 %7, -1
  store i64 %8, i64* %4, align 8
  %9 = icmp ne i64 %7, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %6
  %11 = load i64*, i64** @crc_table, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64*, i64** %3, align 8
  %14 = getelementptr inbounds i64, i64* %13, i32 1
  store i64* %14, i64** %3, align 8
  %15 = load i64, i64* %13, align 8
  %16 = xor i64 %12, %15
  %17 = getelementptr inbounds i64, i64* %11, i64 %16
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %5, align 8
  br label %6

19:                                               ; preds = %6
  %20 = load i64, i64* %5, align 8
  %21 = sub i64 255, %20
  %22 = trunc i64 %21 to i32
  %23 = call i32 @BT_DBG(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load i64, i64* %5, align 8
  %25 = sub i64 255, %24
  ret i64 %25
}

declare dso_local i32 @BT_DBG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
